Fixed proper authentication message issue
